--- a/allifmaalcommonapp/templates/allifmaalcommonapp/companies/company-details.html
+++ b/allifmaalcommonapp/templates/allifmaalcommonapp/companies/company-details.html
@@ -1,364 +1,161 @@
-{% extends 'allifmaalcommonapp/base/uimainbase/allifmaaluibase.html'%}
-{% load humanize %}
-{% block title %}
-{{title}}
-{% endblock %}
-{% block style %}
-{%endblock%}
-{% block body %}
-<div class="allifmaal-main-container">
+  {% extends 'allifmaalcommonapp/ui/details/item-details.html'%}
+  {% load humanize %}
+  {% load allif_navigation_tags %}
+  {% block add-form-header-block %}
+  <a href="{% url 'allifmaalcommonapp:commonCompanyDetailsForClients' user_var glblslug %}">Company</a>
+  <a href="{% allif_get_single_nav_link_url 'Divisions' user_var glblslug %}">Divisions</a>
+  <a href="{% allif_get_single_nav_link_url 'Branches' user_var glblslug %}">Branches</a>
+  <a href="{% allif_get_single_nav_link_url 'Departments' user_var glblslug %}">Departments</a>
+  <a href="{% allif_get_single_nav_link_url 'OperationYears' user_var glblslug %}">Years</a>
+  {%endblock%}
 
-<!--start....main headere-->
-<div class="card-header">
-
-<div class="row mt-12" ><!--start....header row-->
-
-<div class="col-md-12"><!--start....header column-->
-
-<div class="container-fluid amel-content-header">
-<div class="dropdown allifmaal-content-dropdown">
-  <a class="dropdown-toggle" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
-  Actions
-  </a>
-  <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
-    <div class="content-dropdown-menu">
-    <li><a class="dropdown-item" href="{% url 'allifmaalcommonapp:commonEditEntityByAllifAdmin' allifquery.id user_var glblslug %}">Edit Company</a></li>
-    <li><a class="dropdown-item body-delete-link" href="{% url 'allifmaalcommonapp:commonWantToDeleteCompany' allifquery.id user_var glblslug %}">Delete Company</a></li>
-
-   </div>
-  </ul>
-</div>
-
- 
-<a href="{% url 'allifmaalcommonapp:commonHome' user_var glblslug %}">Home</a>
-    
-<a href="{% url 'allifmaalcommonapp:commonCompanies' user_var glblslug %}">Companies</a>
- 
-<div class="dropdown allifmaal-content-dropdown">
-<a class="dropdown-toggle" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
-Actions
-</a>
-<ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
-  <div class="content-dropdown-menu">
-  
-<li>
-  <a class="dropdown-item" href="{% url 'allifmaalcommonapp:commonEditEntityByAllifAdmin' allifquery.slgfld user_var glblslug %}">Edit Company</a></li>
- 
-<li><a class="dropdown-item" href="{% url 'allifmaalcommonapp:commonWantToDeleteCompany' allifquery.id user_var glblslug %}">Delete Company</a></li>
-
- </div>
-</ul>
-</div>
-
-<a href="{% url 'allifmaalcommonapp:commonhrm' user_var glblslug %}">HRM</a>
-
-<div class="dropdown allifmaal-content-dropdown">
-<a class="dropdown-toggle" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
-Accounts
-</a>
-<ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
-  <div class="content-dropdown-menu">
-  <li><a class="dropdown-item" href="{% url 'allifmaalcommonapp:commonGeneralLedgers' user_var glblslug %}">GL Accounts</a></li>
-  <li><a class="dropdown-item" href="{% url 'allifmaalcommonapp:commonChartofAccounts' user_var glblslug %}">Chart of A/Cs</a></li>
-  
-  </div>
-</ul>
-</div>
-
-<a href="{% url 'allifmaalcommonapp:commonCompanyDetailsForClients' user_var glblslug %}">Company</a>
-
-<div class="dropdown allifmaal-content-dropdown">
-  <a class="dropdown-toggle" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
-  Navigate
-  </a>
-  <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
-    <div class="content-dropdown-menu">
-    <li><a class="dropdown-item" href="{% url 'allifmaalcommonapp:commonAssets' user_var glblslug %}">Assets</a></li>
-    <li><a class="dropdown-item" href="{% url 'allifmaalcommonapp:commonExpenses' user_var glblslug %}">Expenses</a></li>
-    
-    </div>
-  </ul>
-</div>
-<a href="{% url 'allifmaalcommonapp:commonTasks' user_var glblslug %}">Tasks</a>
-<div class="dropdown allifmaal-content-dropdown">
-  <a class="dropdown-toggle" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
-  Banks
-  </a>
-  <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
-    <div class="content-dropdown-menu">
-    <li><a  class="dropdown-item" href="{% url 'allifmaalcommonapp:commonBanks' user_var glblslug %}">Banks</a></li>
-    <li><a  class="dropdown-item" href="{% url 'allifmaalcommonapp:commonBankShareholderDeposits' user_var glblslug %}">Deposits</a>
-      </li>
-    <li><a href="{% url 'allifmaalcommonapp:commonBankWithdrawals' user_var glblslug %}">Withdrawals</a></li>
-    </div>
-  </ul>
-</div>
-<a href="{% url 'allifmaalcommonapp:commonCustomers' user_var glblslug %}">Customers</a>
-<a href="{% url 'allifmaalcommonapp:commonSuppliers' user_var glblslug %}">Suppliers</a>
-</div>
-
-    </div><!--end....header column-->
-  
-  </div><!--end....header row-->
-
-</div><!--end....main headere-->
-
-  <div class="allifmaincontainer">
-<div class="row mt-12"> <!--start....table row-->
-  <div class="table-details-content-description">{{allifquery}} Details</div>
-  <div class="col-md-12"> <!--start....table column-->
-  <div class="allif-scroll-table">
-    <div class="allif-info-tables">
-      <div class="row"><!--start of row div --->
-  <!--start of column two-->
-  <div class="col-md-4">
-    
-      <!--start of the table here-->
-      <div class="table-responsive">
-      <table class="table table-layout">
-      <tbody>
+  {% block details-table-col-one %}
+    <tr>
+      <td class="allif-fix-table-col">Company</td>
+      <td>{{allifquery.company}}</td>
+    </tr>
       <tr>
-        <td class="allif-fix-table-col">Company</td>
-        <td>{{allifquery.company}}</td>
-    
-        </tr>
-        <tr>
-          <td class="allif-fix-table-col">Email</td>
-          <td>{{allifquery.email}}</td>
-      
-          </tr>
-          <tr>
-            <td class="allif-fix-table-col">Phone 1</td>
-            <td>{{allifquery.phone1}}</td>
-        
-            </tr>
-            <tr>
-              <td class="allif-fix-table-col">Phone 2</td>
-              <td>{{allifquery.phone2}}</td>
-          
-              </tr>
-              <tr>
-                <td class="allif-fix-table-col">City</td>
-                <td>{{allifquery.city}}</td>
-            
-                </tr>
-                <tr>
-                  <td class="allif-fix-table-col">Country</td>
-                  <td>{{allifquery.country}}</td>
-              
-                  </tr>
-        </tbody>
-        </table>
-      </div>
-        </div>
-           
-    
-     <!--start of column two-->
-     <div class="col-md-4">
-       <!--start of the table here-->
-       <div class="allif-details-card table-responsive">
-       <table class="table table-layout">
-        <tbody>
-          <tr>
-            <td class="allif-fix-table-col">Owner</td>
-            <td>{{allifquery.owner}}</td>
-        
-            </tr>
-      <tr>
-        <td class="allif-fix-table-col">P.O.BOX</td>
-        <td>{{allifquery.pobox}}</td>
-    
-        </tr>
-        <tr>
-          <td class="allif-fix-table-col">Website</td>
-          <td>{{allifquery.website}}</td>
-      
-          </tr>
-        <tr>
-          <td class="allif-fix-table-col">Address</td>
-          <td>{{allifquery.address}}</td>
-      
-          </tr>
-          <tr>
-            <td class="allif-fix-table-col">Sector</td>
-            <td>{{allifquery.sector}}</td>
-        
-            </tr>
-            <tr>
-              <td class="allif-fix-table-col">Date</td>
-              <td>{{allifquery.date|date:'d/m/Y'}}</td>
-          
-              </tr>
-              <tr>
-                <td class="allif-fix-table-col">Last Update</td>
-                <td>{{allifquery.updatedon|date:'d/m/Y'}}</td>
-            
-                </tr>
-          </tbody>
-          </table>
-          </div>
-          </div>
-    
-    
-     <!--start of column two-->
-     <div class="col-md-4">
-      <div class="allif-details-card table-responsive">
-       <!--start of the table here-->
-       <table class="table table-layout">
-        <tbody>
-        <tr>
-          <td class="allif-fix-table-col">UID</td>
-          <td>{{allifquery.companyuid}}</td>
-      
-          </tr>
-          <tr>
-            <td class="allif-fix-table-col">Slug</td>
-            <td>{{allifquery.companyslug}}</td>
-        
-            </tr>
-            <tr>
-              <td class="allif-fix-table-col">Logo</td>
-              <td>
-              {% if allifquery.logo %}
-              <a href="{{ allifquery.logo.url }}" class="btn btn-secondary allifanchorimge" target="_blank" >
-               <img src="{{allifquery.logo.url}}"  width="200" ></a>
-              {% else %}
-              <span class="text-muted">No Logo</span>
-              {% endif %}
-        </td>
-            </tr>
-          </tbody>
-          </table>
-  </div>
-    </div>
-    </div><!--end of row div --->
-      
-        </div>
+      <td class="allif-fix-table-col">Phone 1</td>
+      <td>{{allifquery.phone1}}</td>
+    </tr>
+     <tr>
+    <td class="allif-fix-table-col">Email</td>
+    <td>{{allifquery.email}}</td>
+  </tr>
+  {%endblock%}
 
-</div><!--end....table row-->
-</div>
-<!--end of table-->
-
-</div><!--end of main container of the page....-->
-
-
-
-<!--end of table-->
-
-<!--end of table-->
-<div class="row mt-12"> <!--start....table row-->
-  <div class="col-md-12"> <!--start....table column-->
-  <div class="allif-scroll-table">
-    <div class="table-responsive allif-full-table">
-    <table class="table table-layout">
-      <thead>
-        <tr class="allif-table-header-row">
-        <td>Company</td>
-        <td>Address</td>
-        <td>Phone</td>
-        <td>Email</td>
-       
-        </tr>
-        </thead>
-        <tbody class="allif-table-body">
-       
-        <tr>
-          <td>
-            <a href="{% url 'allifmaalcommonapp:commonCompanyDetailsForClients' user_var glblslug %}" class="allif-table-links">
-           {{allifquery.company}}
-            </a>
-          </td>
-        <td>{{allifquery.address}}</td>
-        <td>{{allifquery.phone1}}</td>
-        <td>{{allifquery.email}}</td>
-       
-      </tr>
-      
-      </tbody>
-    </table>
-    </div>
-   </div>
-
-</div><!--end....table column-->
-
-</div><!--end....table row-->
-
-
-<div class="row mt-12"> <!--start....table row-->
-  <div class="col-md-12"> <!--start....table column-->
-    <div class="table-content-description"> <a href="{% url 'allifmaalcommonapp:commonAddCompanyScope' user_var glblslug %}" class="allif-table-links"> Scopes</a> </div>
-  <div class="allif-scroll-table">
-    <div class="table-responsive allif-full-table">
-    <table class="table table-layout">
-      <thead>
-        <tr class="allif-table-header-row">
-        <td class="allif-fix-table-col">Scope</td>
-        
-        <td>Comments</td>
-        <td>Created By</td>
-      
-        <td>Date</td>
-        <td>Navigate</td>
-        <td> . . . </td>
-        <td></td>
-        </tr>
-        </thead>
-        <tbody class="allif-table-body">
-         
-        
-        {% for item in allifqueryset %} 
-        <tr data-id="{{item.id}}">
-        <td class="allif-fix-table-col"><a class="allif-table-links" href="">{{item.name}}</a></td>
-        <td>{{item.comments}}</td>
-        <td>{{item.owner}}</td>
-        <td>{{item.date|date:'d/m/Y'}}</td>
-       
-        
-        <td>
-          <div class="dropdown allifmaal-content-dropdown">
-            <a href="#" onclick="showDropdown(event, this)" class="dropdown-toggle dropdown-item" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">{{open_link}}</a>
-            <div class="dropdown-content">
-              <a href="{% url 'allifmaalcommonapp:commonEditCompanyScope' item.id user_var glblslug %}" class="dropdown-item" id="allif-table-drop-item-link">Edit Item</a>
-              <a href="#" onclick="confirmDelete(this)" class="dropdown-item" id="allif-table-drop-item-link-delete">Delete Item </a>
-              
-            </div>
-          </div>
-          <div class="dropdown allif-confirm-action">
-            
-            <a href="{% url 'allifmaalcommonapp:commonAddCompanyScope' user_var glblslug %}" id="allif-confirm-delete">No</a><span><strong> | </strong></span>
-            <a href="{% url 'allifmaalcommonapp:commonDeleteCompanyScope' item.id user_var glblslug %}" id="allif-confirm-delete">Confirm</a>
-          </div>
-
-
-
-
-        </td>
-
-      
-       
-       <td> . . . </td>
-       <td></td>
-      </tr>
-      {% endfor %}
-      </tbody>
-    </table>
-    </div>
-   </div>
-
-</div><!--end....table column-->
-
-</div><!--end....table row-->
-
-
-</div>
-</div>
-  {% block scripts %}
-
+  {% block details-table-col-two %}
+  <tr>
+    <td class="allif-fix-table-col">Phone 2</td>
+    <td>{{allifquery.phone2}}</td>
+  </tr>
+ 
+   <tr>
+    <td class="allif-fix-table-col">Owner</td>
+    <td>{{allifquery.owner}}</td>
+  </tr>
+   <tr>
+    <td class="allif-fix-table-col">P.O. Box</td>
+    <td>{{allifquery.pobox}}</td>
+  </tr>
   {% endblock %}
-   {% endblock %}
-   
+  
+  {% block core-details-tab-col-one %}
+  <tr>
+    <td class="allif-fix-table-col">Address</td>
+    <td>{{allifquery.address}}</td>
+  </tr>
+   <tr>
+    <td class="allif-fix-table-col">City</td>
+    <td>{{allifquery.city}}</td>
+  </tr>
+  <tr>
+    <td class="allif-fix-table-col">Country</td>
+    <td>{{allifquery.country}}</td>
 
+  </tr>
+  
+  <tr>
+    <td class="allif-fix-table-col">Website</td>
+    <td>{{allifquery.website}}</td>
+  </tr>
+  
+  <tr>
+    <td class="allif-fix-table-col">Sector</td>
+    <td>{{allifquery.sector}}</td>
+  </tr>
+  <tr>
+    <td class="allif-fix-table-col">Date</td>
+    <td>{{allifquery.date|date:'d/m/Y'}}</td>
+  </tr>
+  {%endblock%}
 
+  {% block core-details-tab-col-two %}
+ 
+  <tr>
+    <td class="allif-fix-table-col">Deletable</td>
+    <td>{{allifquery.can_delete}}</td>
+  </tr>
 
+   <tr>
+      <td class="allif-fix-table-col">Logo</td>
+      <td>
+      {% if allifquery.logo %}
+      <a href="{{ allifquery.logo.url }}" class="btn btn-secondary allifanchorimge" target="_blank" >
+        <img src="{{allifquery.logo.url}}"  width="200" ></a>
+      {% else %}
+      <span class="text-muted">No Logo</span>
+      {% endif %}
+    </td>
+    </tr>
+  {% endblock %}
 
+    
+  {% block allif_sensitive_section_col_one %}
+  <tr>
+      <td class="allif-fix-table-col">Defaults</td>
+      <td><a class="amel-table-list-identifier" href="{% allif_get_single_nav_link_url 'Defaults' user_var glblslug %}">Defaults</a></td>
+    </tr>
 
+  <tr>
+      <td class="allif-fix-table-col">Currencies</td>
+      <td><a class="amel-table-list-identifier" href="{% allif_get_single_nav_link_url 'Currencies' user_var glblslug %}">Currencies</a></td>
+    </tr>
+
+    <tr>
+      <td class="allif-fix-table-col">Categories</td>
+      <td><a class="amel-table-list-identifier" href="{% allif_get_single_nav_link_url 'Categories' user_var glblslug %}">Categories</a></td>
+    </tr>
+
+    <tr>
+      <td class="allif-fix-table-col">Codes</td>
+      <td><a class="amel-table-list-identifier" href="{% allif_get_single_nav_link_url 'Codes' user_var glblslug %}">Codes</a></td>
+    </tr>
+
+    <tr>
+      <td class="allif-fix-table-col">Measurements</td>
+      <td><a class="amel-table-list-identifier" href="{% allif_get_single_nav_link_url 'MeasuringUnits' user_var glblslug %}">Units</a></td>
+    </tr>
+
+    <tr>
+      <td class="allif-fix-table-col">Accounts</td>
+      <td><a class="amel-table-list-identifier" href="{% allif_get_single_nav_link_url 'Accounts' user_var glblslug %}">Accounts</a></td>
+    </tr>
+  {% endblock %}
+  {% block allif_sensitive_section_col_two %}
+  
+<tr>
+      <td class="allif-fix-table-col">Scopes</td>
+      <td><a class="amel-table-list-identifier" href="{% allif_get_single_nav_link_url 'CompanyScopes' user_var glblslug %}">Services</a></td>
+    </tr>
+<tr>
+      <td class="allif-fix-table-col">Spaces</td>
+      <td><a class="amel-table-list-identifier" href="{% allif_get_single_nav_link_url 'Spaces' user_var glblslug %}">Spaces</a></td>
+    </tr>
+
+  <tr>
+      <td class="allif-fix-table-col">Payment Terms</td>
+      <td><a class="amel-table-list-identifier" href="{% allif_get_single_nav_link_url 'Payment_Terms' user_var glblslug %}">Payment Terms</a></td>
+    </tr>
+
+    <tr>
+      <td class="allif-fix-table-col">Sales Taxes</td>
+      <td><a class="amel-table-list-identifier" href="{% allif_get_single_nav_link_url 'TaxParameters' user_var glblslug %}">Sales Tax</a></td>
+    </tr>
+  
+    <tr>
+      <td class="allif-fix-table-col"> {{allifquery}}</td>
+      <td><a class="amel-table-list-identifier" href="{% url 'allifmaalcommonapp:commonEditEntityByAllifAdmin' allifquery.id user_var glblslug %}">Edit {{allifquery}}</a></td>
+    </tr>
+
+    <tr>
+      <td class="allif-fix-table-col">Delet {{allifquery}}</td>
+      <td><a class="amel-table-list-identifier body-delete-link" href="{% url 'allifmaalcommonapp:commonWantToDeleteCompany' allifquery.id user_var glblslug %}">Delete {{allifquery}}</a></td>
+    </tr>
+    
+    {% endblock %}
+
+  {% block item_details_related_items_full_table %} {%endblock%}
+  {% block item_details_related_items_full_half_tables %}{%endblock%}
+
+ 
