--- a/allifmaalcommonapp/templates/allifmaalcommonapp/companies/edit-entity-client.html
+++ b/allifmaalcommonapp/templates/allifmaalcommonapp/companies/edit-entity-client.html
@@ -1,175 +1,81 @@
-{% extends 'allifmaalcommonapp/base/uimainbase/allifmaaluibase.html'%}
-{% load humanize %}
-{% block title %}
-{{title}}
-{% endblock %}
-{% block style %}
-{%endblock%}
-{% block body %}
-<div class="allifmaal-main-container">
- 
-<!--start....main headere-->
-<div class="card-header">
-
-<div class="row mt-12" ><!--start....header row-->
-
-<div class="col-md-12"><!--start....header column-->
-
-<div class="container-fluid amel-content-header">
-  <a href="{% url 'allifmaalcommonapp:commonHome' user_var glblslug %}">Home</a>
-  
-    <a href="{% url 'allifmaalcommonapp:commonCompanyDetailsForClients' user_var glblslug %}">Company</a>
-  
-  <a href="{% url 'allifmaalcommonapp:commonDepartments' user_var glblslug %}">Departments</a>
- 
-</div>
-
-    </div><!--end....header column-->
-  
-  </div><!--end....header row-->
-
-</div><!--end....main headere-->
-
-
-  <div class="allifmaincontainer">
-
-<div class="row mt-12"> <!--start....table row-->
-  <div class="table-details-content-description">Add/Edit New Company Details</div>
-  <form method='POST' action='' enctype="multipart/form-data">{% csrf_token %}
-  <div class="col-md-12"> <!--start....table column-->
-  <div class="allif-scroll-table">
-    <div class="allif-info-tables">
-      <div class="row"><!--start of row div --->
-  <!--start of column two-->
-  <div class="col-md-4">
-    
-      <!--start of the table here-->
-      <div class="table-responsive">
-      <table class="table table-layout">
-      <tbody>
-     
-        <tr>
-          <td class="allif-fix-table-col">Company</td>
-          <td>{{form.company}}</td>
-      
-          </tr>
-        
-      <tr>
-        <td class="allif-fix-table-col">Sector</td>
-        <td>{{form.sector}}</td>
-    
-        </tr>
-        
-       
-          <tr>
-            <td class="allif-fix-table-col">Phone 1</td>
-            <td>{{form.phone1}}</td>
-        
-            </tr>
-          <tr>
-            <td class="allif-fix-table-col">Phone 2</td>
-            <td>{{form.phone2}}</td>
-        
-            </tr>
-            <tr>
-              <td class="allif-fix-table-col">Email</td>
-              <td>{{form.email}}</td>
-          
-              </tr>
-             
-          
-        </tbody>
-        </table>
-      </div>
-        </div>
-           
-    
-     <!--start of column two-->
-     <div class="col-md-4">
-       <!--start of the table here-->
-       <div class="allif-details-card table-responsive">
-       <table class="table table-layout">
-        <tbody>
-         
-          <tr>
-            <td class="allif-fix-table-col">Address</td>
-            <td>{{form.address}}</td>
-        
-            </tr>
-            <tr>
-              <td class="allif-fix-table-col">City</td>
-              <td>{{form.city}}</td>
-          
-              </tr>
-         
-                  <tr>
-                    <td class="allif-fix-table-col">Country</td>
-                    <td>{{form.country}}</td>
-                
-                    </tr>
-              
-                      <tr>
-                        <td class="allif-fix-table-col">P.O.Box</td>
-                        <td>{{form.pobox}}</td>
-                    
-                        </tr>   
-          </tbody>
-          </table>
-          </div>
-          </div>
-    
-    
-     <!--start of column two-->
-     <div class="col-md-4">
-      <div class="allif-details-card table-responsive">
-       <!--start of the table here-->
-       <table class="table table-layout">
-        <tbody>
-        
-            <tr>
-              <td class="allif-fix-table-col">Website</td>
-              <td>{{form.website}}</td>
-          
-              </tr>
-              <tr>
-                <td class="allif-fix-table-col">Logo</td>
-                <td>{{form.logo}}</td>
-            
-                </tr>
-          
-              <tr>
-                <td class="allif-fix-table-col">Can Delete</td>
-                <td>{{form.can_delete}}</td>
-            
-                </tr>
-            <tr>
-              <td class="allif-fix-table-col">Action</td>
-              <td> <input type="submit" value='Save' class="btn btn-success allifmaal-submit-btn"></td>
-          
-              </tr>
-          </tbody>
-          </table>
-  </div>
-    </div>
-    </div><!--end of row div --->
-      
-        </div>
-
-</div><!--end....table row-->
-</div>
-</form>
-<!--end of table-->
-
-</div><!--end of main container of the page....-->
-
-
-
-
-</div>
-
-</div>
-  {% block scripts %}
+{% extends 'allifmaalcommonapp/ui/forms/add-form.html'%}
+{% load allif_navigation_tags %}
+ {% block add-form-header-block %}
 
   {% endblock %}
-   {% endblock %}
-   
+   {% block core-tab-col-one %}
+    <tr>
+      <td class="allif-fix-table-col-forms">Company</td>
+      <td>{{form.company}}</td>
+    </tr>
+      <tr>
+      <td class="allif-fix-table-col-forms">Address</td>
+      <td>{{form.address}}</td>
+    </tr>
+      <tr>
+      <td class="allif-fix-table-col-forms">Email</td>
+      <td>{{form.email}}</td>
+    </tr>
+    <tr>
+      <td class="allif-fix-table-col-forms">City</td>
+      <td>{{form.city}}</td>
+    </tr>
+    <tr>
+      <td class="allif-fix-table-col-forms">Sector</td>
+      <td>{{form.sector}}</td>
+    </tr>
+
+    
+    {%endblock%}
+
+      {% block core-tab-col-two %}
+    
+     <tr>
+      <td class="allif-fix-table-col-forms">Country</td>
+      <td>{{form.country}}</td>
+    </tr>
+     <tr>
+      <td class="allif-fix-table-col-forms">PO Box</td>
+      <td>{{form.pobox}}</td>
+    </tr>
+
+    <tr>
+      <td class="allif-fix-table-col-forms">Website</td>
+      <td>{{form.website}}</td>
+    </tr>
+    <tr>
+      <td class="allif-fix-table-col-forms">Logo</td>
+      <td>{{form.logo}}</td>
+    </tr>
+    
+  <tr>
+      <td class="allif-fix-table-col-forms">Delete Status</td>
+      <td>{{form.can_delete}}</td>
+    </tr>
+    {%endblock%}
+    {% block bottom-fields-col-one %}
+     <tr>
+      <td class="allif-fix-table-col-forms">Phone 1</td>
+      <td>{{form.phone1}}</td>
+    </tr>
+    {%endblock%}
+    {% block bottom-fields-col-two %}
+     <tr>
+      <td class="allif-fix-table-col-forms">Phone 2</td>
+      <td>{{form.phone2}}</td>
+    </tr>
+    {%endblock%}
+
+    {% block static-form-fields %} {%endblock%}
+  {% block allif_sensitive_section_col_one %}
+    <tr>
+      <td class="allif-fix-table-col"> {{allifquery}}</td>
+      <td><a class="amel-table-list-identifier" href="{% allif_get_single_nav_link_url 'Banks' user_var glblslug %}">Go Back</a></td>
+    </tr>
+  {% endblock %}
+  {% block allif_sensitive_section_col_two %}
+    <tr>
+      <td class="allif-fix-table-col">Delet {{allifquery}}</td>
+      <td><a class="amel-table-list-identifier body-delete-link" href="{{ allif_contextual_action_links.wanttodeletebank.url }}">Delete {{allifquery}}</a></td>
+    </tr>
+    {% endblock %}
