--- a/allifmaalcommonapp/templates/allifmaalcommonapp/companies/newentity.html
+++ b/allifmaalcommonapp/templates/allifmaalcommonapp/companies/newentity.html
@@ -24,7 +24,7 @@
   </div>
 </div>
     
-  <div class="row mt-12"> <!--start....table row-->
+  <div class="row mt-12"> <!--start....table row...-->
     <div class="col-md-12"><!--start of the first row body-->
       <div class="allif-form-container">
       <form method='POST' action='' enctype="multipart/form-data">{% csrf_token %}
