--- a/allifmaalcommonapp/templates/allifmaalcommonapp/hrm/users/adduser.html
+++ b/allifmaalcommonapp/templates/allifmaalcommonapp/hrm/users/adduser.html
@@ -1,22 +1,7 @@
-{% extends 'allifmaalcommonapp/base/uimainbase/allifmaaluibase.html'%}
-{% load humanize %}
-{% block title %}
-{{title}}
-{% endblock %}
-{% block style %}
-{%endblock%}
-{% block body %}
-<div class="allifmaal-main-container">
- 
-<!--start....main headere-->
-<div class="card-header">
-
-<div class="row mt-12" ><!--start....header row-->
-
-<div class="col-md-12"><!--start....header column-->
-
-<div class="container-fluid amel-content-header">
-
+{% extends 'allifmaalcommonapp/ui/forms/add-form.html'%}
+{% load allif_navigation_tags %}
+ {% block add-form-header-block %}
+  
 <a href="{% url 'allifmaalcommonapp:commonHome' user_var glblslug %}">Home</a>
 <a href="{% url 'allifmaalcommonapp:commonAddStaffProfile' user_var glblslug %}">Add Profile</a>
 
@@ -24,261 +9,54 @@
 
 <a href="{% url 'allifmaalcommonapp:commonhrm' user_var glblslug %}">Staff</a>
 
-</div>
-
-    </div><!--end....header column-->
-  
-  </div><!--end....header row-->
-
-</div><!--end....main headere-->
-
-
-  <div class="allifmaincontainer">
-    {% if user_var_update %}
-    <div class="row mt-12"> <!--start....table row-->
-      <div class="table-details-content-description">Edit The <strong>{{user_var_update}}</strong>  User Details</div>
-      <form method='POST' action='' enctype="multipart/form-data">{% csrf_token %}
-      <div class="col-md-12"> <!--start....table column-->
-      <div class="allif-scroll-table">
-        <div class="allif-info-tables">
-          <div class="row"><!--start of row div --->
-      <!--start of column two-->
-      <div class="col-md-4">
-        
-          <!--start of the table here-->
-          <div class="table-responsive">
-          <table class="table table-layout">
-          <tbody>
-
-        <tr>
-          <td class="allif-fix-table-col">User Company Slug</td>
-          <td>{{form.usercompany}}</td>
-        
-          </tr>
-          <tr>
-          <td class="allif-fix-table-col">Division</td>
-          <td>{{form.division}}</td>
-        
-          </tr>
-          <tr>
-            <td class="allif-fix-table-col">Company</td>
-            <td>{{form.company}}</td>
-        
-            </tr>
-            <tr>
-              <td class="allif-fix-table-col">Branch</td>
-              <td>{{form.branch}}</td>
-          
-              </tr>
-           
-            </tbody>
-            </table>
-          </div>
-            </div>
-               
-        
-         <!--start of column two-->
-         <div class="col-md-4">
-           <!--start of the table here-->
-           <div class="allif-details-card table-responsive">
-           <table class="table table-layout">
-            <tbody>
-              <tr>
-                <td class="allif-fix-table-col">Department</td>
-                <td>{{form.department}}</td>
-            
-                </tr>
-                <tr>
-                  <td class="allif-fix-table-col">First Name</td>
-                  <td>{{form.first_name}}</td>
-              
-                  </tr>
-                  
-                 
-               
-          <tr>
-            <td class="allif-fix-table-col">Last Name</td>
-            <td>{{form.last_name}}</td>
-          
-            </tr>
-             
-              </tbody>
-              </table>
-              </div>
-              </div>
-        
-        
-         <!--start of column two-->
-         <div class="col-md-4">
-          <div class="allif-details-card table-responsive">
-           <!--start of the table here-->
-           <table class="table table-layout">
-            <tbody>
-              <tr>
-                <td class="allif-fix-table-col">Email</td>
-                <td>{{form.email}}</td>
-              
-                </tr>
-               
-                         
-              <tr>
-                <td class="allif-fix-table-col">User Category</td>
-                <td>{{form.user_category}}</td>
-              
-                </tr>
-                 
-                <tr>
-                  <td class="allif-fix-table-col">Action</td>
-                  <td> <input type="submit" value='Save' class="btn btn-success allifmaal-submit-btn"></td>
-              
-                  </tr>
-              </tbody>
-              </table>
-      </div>
-    
-     
-    
-        </div>
-        </div><!--end of row div --->
-          
-            </div>
-    
-    </div><!--end....table row-->
-    </div>
-    </form>
-    <!--end of table-->
-    
-    </div><!--end of main container of the page....-->
-
-      
-
-{% else %}
-<div class="row mt-12"> <!--start....table row-->
-  <div class="table-details-content-description">Add New System User</div>
-  <form method='POST' action='' enctype="multipart/form-data">{% csrf_token %}
-  <div class="col-md-12"> <!--start....table column-->
-  <div class="allif-scroll-table">
-    <div class="allif-info-tables">
-      <div class="row"><!--start of row div --->
-  <!--start of column two-->
-  <div class="col-md-4">
-    
-      <!--start of the table here-->
-      <div class="table-responsive">
-      <table class="table table-layout">
-      <tbody>
-		
-          <tr>
-            <td class="allif-fix-table-col">First Name</td>
-            <td>{{form.first_name}}</td>
-        
-            </tr>
-            
-            <tr>
-              <td class="allif-fix-table-col">Last Name</td>
-              <td>{{form.last_name}}</td>
-            
-              </tr>
-             
-         
-        </tbody>
-        </table>
-      </div>
-        </div>
-           
-    
-     <!--start of column two-->
-     <div class="col-md-4">
-       <!--start of the table here-->
-       <div class="allif-details-card table-responsive">
-       <table class="table table-layout">
-        <tbody>
-          <tr>
-            <td class="allif-fix-table-col">Email</td>
-            <td>{{form.email}}</td>
-          
-            </tr>
-				  <tr>
-					<td class="allif-fix-table-col">User Category</td>
-					<td>{{form.user_category}}</td>
-				
-					</tr>
-           
-                     
-          </tbody>
-          </table>
-          </div>
-          </div>
-    
-    
-     <!--start of column two-->
-     <div class="col-md-4">
-      <div class="allif-details-card table-responsive">
-       <!--start of the table here-->
-       <table class="table table-layout">
-        <tbody>
-			<tr>
-				<td class="allif-fix-table-col">Password</td>
-				<td>{{form.password1}}</td>
-			
-				</tr>
-				<tr>
-				  <td class="allif-fix-table-col">Confirm Password</td>
-				  <td>{{form.password2}}</td>
-			  
-				  </tr>
- 
-            <tr>
-              <td class="allif-fix-table-col">Action</td>
-              <td> <input type="submit" value='Save' class="btn btn-success allifmaal-submit-btn"></td>
-          
-              </tr>
-          </tbody>
-          </table>
-  </div>
-
-    </div>
-    </div><!--end of row div --->
-      
-        </div>
-
-</div><!--end....table row-->
-</div>
-</form>
-<!--end of table-->
-
-</div><!--end of main container of the page....-->
-<script>
-  /* Because i didnt set placeholder values in forms.py they will be set here using vanilla Javascript
-  //We start indexing at one because CSRF_token is considered and input field 
-  */
-  
-  //Query All input fields
-  var form_fields = document.getElementsByTagName('input')
-  //form_fields[1].placeholder='User Name';
-  form_fields[1].placeholder='First Name';
-  form_fields[2].placeholder='Last Name';
-  form_fields[3].placeholder='Email Address';
-  form_fields[4].placeholder='Enter password';
-  form_fields[5].placeholder='Confirm Password';
-  
-  for (var field in form_fields){	
-    form_fields[field].className += ' form-control'
-  }
-  </script>
-
-{% endif %}
-
-
-</div>
-
-</div>
-  {% block scripts %}
-	  
-  
-     
   {% endblock %}
+   {% block core-tab-col-one %}
+    <tr>
+      <td class="allif-fix-table-col-forms">Division</td>
+      <td>{{form.division}}</td>
+    </tr>
+      <tr>
+      <td class="allif-fix-table-col-forms">Address</td>
+      <td>{{form.address}}</td>
+    </tr>
+     
+    {%endblock%}
 
-  	  
-   {% endblock %}
+      {% block core-tab-col-two %}
+     <tr>
+      <td class="allif-fix-table-col-forms">Email</td>
+      <td>{{form.email}}</td>
+    </tr>
+    <tr>
+      <td class="allif-fix-table-col-forms">City</td>
+      <td>{{form.city}}</td>
+    </tr>
    
+    {%endblock%}
+    {% block bottom-fields-col-one %}
+     <tr>
+      <td class="allif-fix-table-col-forms">Phone 1</td>
+      <td>{{form.phone1}}</td>
+    </tr>
+    {%endblock%}
+    {% block bottom-fields-col-two %}
+     <tr>
+      <td class="allif-fix-table-col-forms">Phone 2</td>
+      <td>{{form.phone2}}</td>
+    </tr>
+    {%endblock%}
+
+    {% block static-form-fields %} {%endblock%}
+  {% block allif_sensitive_section_col_one %}
+    <tr>
+      <td class="allif-fix-table-col"> {{allifquery}}</td>
+      <td><a class="amel-table-list-identifier" href="{% allif_get_single_nav_link_url 'Banks' user_var glblslug %}">Go Back</a></td>
+    </tr>
+  {% endblock %}
+  {% block allif_sensitive_section_col_two %}
+    <tr>
+      <td class="allif-fix-table-col">Delet {{allifquery}}</td>
+      <td><a class="amel-table-list-identifier body-delete-link" href="{{ allif_contextual_action_links.wanttodeletebank.url }}">Delete {{allifquery}}</a></td>
+    </tr>
+    {% endblock %}
+
